@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1594 using contribution from Edward Kuns [edward.kuns@aspect.com]
+       Added regression test for CASTOR-1580 to CTF regression suite.
+       Details: http://jira.codehaus.org/browse/CASTOR-1594
+       (Werner - 20060930)
+
 XML:   Resolved issue CASTOR-1589 using contribution from Edward Kuns [edward.kuns@aspect.com]
        Fixed ComplexType-DirectAccess test complaining about differences.
        Details: http://jira.codehaus.org/browse/CASTOR-1589
